# bitcoin-vault

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.tools  Jenkinsfile  Makefile  README.md  bitcoin.conf  bitcoin.sh  bun.lockb  package.json  run.sh  test_ffi.dockerfile  todo.md  tsconfig.build.json
binding/: .env.test  .gitignore  README.md  build.ts  bun.lockb  package-lock.json  package.json  tsconfig.json
binding/example/: bonding.ts  eth.ts  params.ts  unstaking.ts
binding/src/: chain.ts  index.ts  staking.ts  unstaking.ts  utils.ts  vault.ts
binding/src/client/: bitcoin.ts  index.ts  mempool.ts
binding/src/encode/: abi.ts  contractCallWithToken.ts  index.ts  unstaking.ts
binding/src/types/: bitcoin.ts  btc.ts  fee.ts  index.ts  network.ts  params.ts  psbt.ts  utxo.ts
binding/src/utils/: btc.ts  encode.ts  index.ts  networks.ts  vault.ts
binding/src/utils/fee/: index.ts
binding/test/: address.test.ts  custodian_only_staking.test.ts  decoder.test.ts  encode.test.ts  example.test.ts  only_covs_staking.test.ts  script.test.ts  signing.test.ts  staking.test.ts  unstaking-dry.test.ts  unstaking-dry2.test.ts  unstaking.test.ts  upc-e2e.test.ts  util.ts
cmd/: Cargo.toml
cmd/src/: collect.rs  commands.rs  lib.rs  main.rs
docs/: contracts.md  descriptors.md  feature-development-guide.md  improvements.md  op_return.md  payload-hash.md  payload.md  staking-unstaking-workflow.md  taproot.md  testing-guide.md
example/: .gitignore  package.json  tsconfig.json
example/src/: bonding.ts  params.ts  unstaking.ts
example/test/: example.test.ts
ffi/: Cargo.toml  README.md
ffi/go/: Makefile  aggregate.go  errors.go  go.mod  go.sum  parse.go  sign.go  sign_collect.go  taproot.go  types.go  unlocking.go
ffi/go-example/: Makefile  go.mod  main.go
ffi/go-psbt/: Makefile  go.mod  sign_by_single_key.go  staking.go  unstaking.go
ffi/go-psbt/docker/: build_linux.dockerfile  test_ffi.dockerfile
ffi/go-psbt/lib/darwin/: libbitcoin_vault_ffi.d  libbitcoin_vault_ffi.dylib
ffi/go-psbt/lib/linux/: libbitcoin_vault_ffi.d
ffi/go-psbt/tests/: sign_psbt_by_single_key_test.go
ffi/go-vault/: Makefile  aggregate.go  errors.go  finalize.go  go.mod  go.sum  parse.go  parser.go  sign.go  sign_collect.go  sign_psbt.go  taproot.go  types.go  unlocking.go  unstaking.go
ffi/go-vault/docker/: test.alpine.dockerfile
ffi/go-vault/tests/: main_test.go  parse_test.go  parser_test.go  sign_collect2_test.go  sign_collect3_test.go  sign_collect_test.go  sign_psbt_test.go  sign_test.go  taproot_test.go  unstaking_test.go
ffi/go-vault/tests/cmd/: main.go
ffi/go/docker/: build_linux.dockerfile  test.dockerfile  test_ffi.dockerfile
ffi/go/psbt/: sign_by_single_key.go
ffi/go/tests/: main_test.go  parse_test.go  sign_collect2_test.go  sign_collect3_test.go  sign_collect_test.go  sign_psbt_by_single_key_test.go  sign_test.go  taproot_test.go  unstaking_test.go
ffi/go/tests/cmd/: main.go
ffi/src/: error.rs  lib.rs  memory.rs  params.rs  parsing.rs  signing.rs  staking.rs  taproot.rs  types.rs  unlocking.rs  unstaking.rs  utils.rs
go-utils/: README.md  crypto.go  evm.go  evm_test.go  go.mod  go.sum  makefile  parser.go  parser_test.go
go-utils/address/: btc.go  btc_test.go
go-utils/btc/: chains.go  definition.go  script_test.go
go-utils/chain/: btc.go  chain.go  chain_info.go  chain_info_bytes.go  chain_test.go  records.go  types.go
go-utils/encode/: abi.go  contract_call_with_token.go  encode_test.go  execute.go  execute_test.go  staking.go  staking_test.go  transfer_remote_test.go  unstaking.go  unstaking_test.go
go-utils/evm/: chains.go  definition.go  evm.go  evm_test.go
go-utils/proto/btc/: btc.proto
go-utils/scripts/: protogen.sh
go-utils/types/: btc_test.go  ffi.go  types.pb.go
macros/: Cargo.toml
macros/src/: env.rs  lib.rs
scripts/: collect_utxos.sh  coverage.sh  db.sh  test.sh
src/: error.rs  lib.rs  main.rs  staking.rs  utxo.rs
tools/: .gitignore  Cargo.toml  Makefile  tvl_maker.db
tools/abi/: IERC20.json  IGateway.json
tools/src/: lib.rs
tools/src/cmd/: tvl.rs
vault/: .env.example  .gitignore  Cargo.toml  Makefile  README.md
vault/src/: errors.rs  lib.rs  vault.rs
vault/src/core/: branches.rs  constants.rs  errors.rs  fee.rs  manager.rs  mod.rs  params.rs  psbt.rs  root.rs  scripts.rs  signing.rs  staking.rs  taproot.rs  traits.rs  tx.rs  types.rs  unstaking.rs  utils.rs  utxo.rs
vault/src/core/feat/: custodian_only.rs  mod.rs  time_gated.rs  upc.rs
vault/src/crypto/: musig2.rs
vault/src/parser/: error.rs  mod.rs  staking.rs  types.rs
vault/src/staking/: errors.rs  manager.rs  mod.rs  params.rs  psbt.rs  utxo.rs
vault/src/types/: error.rs  mod.rs  psbt.rs  staking.rs  transaction.rs
vault/src/utils/: account.rs  decoder.rs  dest_info.rs  env.rs  helper.rs  key.rs  mod.rs  suite.rs
vault/tests/: build_spend.rs  e2e.rs  e2e_rpc.rs  env.rs  helper.rs  mod.rs  only_covenants.rs  parse.rs  setup_suite.rs  sign_covenant_psbt.rs  sign_psbt.rs  staking_and_unstaking.rs  suite.rs  test_csv.rs  test_custodians.rs  test_e2e.rs  test_only_covenants.rs  test_script.rs  test_scripts.rs  test_standard.rs  test_upc.rs  utxos.rs
vault/tests/common/: env.rs  mod.rs  suite.rs
vault/tests/utils/: env.rs  macros.rs  mod.rs
wasm/: .gitignore  Cargo.toml  build.sh  package-lock.json  package.json  tsconfig-base.json  tsconfig.json  tsconfig.tsbuildinfo  web-wasm.js
wasm/example/: package.json  tsconfig.json
wasm/example/src/: bonding.ts  params.ts  unstaking.ts
wasm/example/src/client/: bitcoin.ts  index.ts
wasm/example/src/utils/: btc.ts  constants.ts  index.ts
wasm/example/src/utils/fee/: index.ts  utils.ts
wasm/example/test/: example.test.ts
wasm/scripts/: combine.js  post-build.js  test.sh  web-wasm.js
wasm/src/: decoder.rs  encoder.rs  errors.rs  lib.rs  tests.rs  vault.rs
wasm/src_ts/: index.ts  inode.ts
wasm/src_ts/client/: bitcoin.ts  index.ts
wasm/src_ts/types/: btc.ts
wasm/src_ts/utils/: index.ts  vault.ts
