[package]
name = "bitcoin-vault-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tvl_maker"
path = "src/bin/tvl_maker.rs"

[lib]
name = "bitcoin_vault_tools"
path = "src/lib.rs"

[dependencies]
bitcoin-vault = { package = "bitcoin-vault", path = "../vault" }
bitcoin = { package = "bitcoin", version = "0.32.4" }
clap = { version = "4.5.10", features = ["derive"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.105"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
anyhow = "1.0.89"
chrono = "0.4.30"
alloy = { version = "0.11.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
