[package]
name = "bitcoin-vault"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitcoin_vault"
path = "src/lib.rs"

[[bin]]
name = "bitcoin_vault"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
bitcoin = { version = "0.32.4" }
bitcoincore-rpc = { version = "0.19.0" }
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.5.0"
serde = "1.0.213"
thiserror = "2.0.3"
validator = { version = "0.19.0", features = ["derive"] }


[features]
default = ["serde"]
rand-std = ["bitcoin/rand-std"]
serde = ["bitcoin/serde"]
