[package]
name = "vault"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/scalarorg/bitcoin-vault/"
description = "Core logic for Scalar Vault"
categories = ["bitcoin"]
keywords = ["bitcoin", "vault", "staking"]
readme = "../README.md"
rust-version = "1.82.0"
exclude = ["tests"]

[lib]
name = "vault"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.91"
bitcoin = { version = "0.32.4" }
bitcoincore-rpc = { version = "0.19.0" }
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.11"
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "2.0.3"
validator = { version = "0.20.0", features = ["derive"] }
serde_with = "3.12.0"
macros = { path = "../macros" }


[features]
default = ["serde"]
rand-std = ["bitcoin/rand-std"]
serde = ["bitcoin/serde"]
